--- a/DockerFile
+++ b/DockerFile
@@ -15,6 +15,7 @@ ARG EMAIL_PASS
 ARG CLODINARY_API_SECRET_KEY
 ARG CLODINARY_API_KEY
 ARG CLODINARY_CLOUD_NAME
+ARG MONGODB_URI
 
 # Set environment variables within the container
 ENV NODE_ENV=${NODE_ENV}
@@ -26,7 +27,8 @@ ENV EMAIL=${EMAIL}
 ENV EMAIL_PASS=${EMAIL_PASS}
 ENV CLODINARY_API_SECRET_KEY=${CLODINARY_API_SECRET_KEY}
 ENV CLODINARY_API_KEY=${CLODINARY_API_KEY}
-ENV CLODINARY_CLOUD_NAME=${CLODINARY_CLOUD_NAME}    
+ENV CLODINARY_CLOUD_NAME=${CLODINARY_CLOUD_NAME}
+ENV MONGODB_URI=${MONGODB_URI}    
 
 
 # Copy package.json and package-lock.json files
