--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4",
     "resend": "^3.5.0",
+    "server": "file:",
     "stripe": "^16.12.0"
+  },
+  "devDependencies": {
+    "cypress": "^13.16.0",
+    "cypress-mailisk": "^2.0.1"
   }
 }
