--- a/package.json
+++ b/package.json
@@ -28,10 +28,16 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4",
     "resend": "^3.5.0",
+    "server": "file:",
     "stripe": "^16.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "jest-mock": "^29.7.0",
+    "mockingoose": "^2.16.2",
     "supertest": "^7.0.0"
   }
 }
