added subcategory testing

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,5 @@
-NODE_ENV="development"
 PORT=8080
-MONGODB_URI=""
+MONGODB_URI="mongodb+srv://rukshanfernando0416:KxIn6QL6cQUPS412@unikart.g1shs.mongodb.net/?retryWrites=true&w=majority&appName=uniKart"
 FRONTEND_URL="http://localhost:5173"
 EMAIL=""
 EMAIL_PASS=""
