--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
@@ -31,7 +30,14 @@
     "stripe": "^16.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@jest/globals": "^29.7.0",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "jest-mock": "^29.7.0",
+    "mongodb-memory-server": "^10.1.2",
+    "mongoose": "^8.8.3",
     "supertest": "^7.0.0"
   }
 }
